--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test-c": "jest --coverage",
+    "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
@@ -40,6 +40,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "glob-all": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
     "koa-bodyparser": "^4.3.0",
     "thread-loader": "^2.1.3",
@@ -58,12 +59,10 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "*.{js,scss}": [
-        "eslint --fix",
-        "git add"
-      ]
-    }
+    "*.{js,scss}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
