feat: add typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,11 +27,11 @@
     "lib": ["es2015", "es2016", "es2017", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.vue",
+    "./tests/**/*.ts",
+    "./tests/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
