--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@types/jest": "^26.0.5",
+    "@types/webpack-env": "^1.15.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -43,6 +45,9 @@
     "html-webpack-plugin": "^3.2.0",
     "koa-bodyparser": "^4.3.0",
     "thread-loader": "^2.1.3",
+    "ts-loader": "^8.0.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.7",
     "vue": "^2.6.10",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.9",
@@ -126,8 +131,10 @@
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^2.1.0",
+    "vue-class-component": "^7.2.4",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.7.1",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
