--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
   },
   "lint-staged": {
     "*.{js,scss}": [
-      "eslint --fix",
       "git add"
     ]
   },
@@ -130,6 +129,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^3.0.6",
+    "ts-jest": "^26.1.3",
     "url-loader": "^2.1.0",
     "vue-class-component": "^7.2.4",
     "vue-jest": "^3.0.5",
