--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@commitlint/config-angular": "^9.1.1",
     "@vue/test-utils": "^1.0.0-beta.33",
     "autoprefixer": "^9.6.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.4.0",
     "babel-loader": "^8.0.6",
