--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "jest",
     "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
-    "dev2": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
     "analyzer": "cross-env NODE_ENV=production webpack --config ./build/webpack.analyzer.js",
@@ -39,6 +38,7 @@
     "@babel/preset-env": "^7.6.0",
     "@types/jest": "^26.0.5",
     "@types/webpack-env": "^1.15.2",
+    "compression-webpack-plugin": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
