--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "vue-teamplete",
+  "name": "template-sap",
   "version": "0.1.3",
-  "description": "vue-teamplete",
+  "description": "template-sap",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
+    "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
+    "build:sit": "cross-env NODE_ENV=production ENVIRONMENT=sit webpack --config ./build/webpack.prod.js",
+    "build:uat": "cross-env NODE_ENV=production ENVIRONMENT=uat webpack --config ./build/webpack.prod.js",
+    "build:pre": "cross-env NODE_ENV=production ENVIRONMENT=pre webpack --config ./build/webpack.prod.js",
     "analyzer": "cross-env NODE_ENV=production webpack --config ./build/webpack.analyzer.js",
     "release": "npm run build && npm run smoke && standard-version",
     "lint": "eslint --ext .js --ext .vue src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Braveheartforyou/vue-teamplete.git"
+    "url": "https://github.com/blackdous/template-sap.git"
   },
   "keywords": [
     "vue",
@@ -28,9 +31,9 @@
   "author": "Braveheartforyou",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Braveheartforyou/vue-teamplete/issues"
+    "url": "https://github.com/blackdous/template-sap.git/issues"
   },
-  "homepage": "https://github.com/Braveheartforyou/vue-teamplete#readme",
+  "homepage": "https://github.com/blackdous/template-sap.git#readme",
   "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
