--- a/package.json
+++ b/package.json
@@ -1,161 +1,10 @@
 {
-  "name": "template-sap",
-  "version": "0.1.4",
-  "description": "template-sap",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
-    "start": "cross-env npm run build && cross-env node build/webpack.start.js",
-    "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:sit": "cross-env NODE_ENV=production ENVIRONMENT=sit webpack --config ./build/webpack.prod.js",
-    "build:uat": "cross-env NODE_ENV=production ENVIRONMENT=uat webpack --config ./build/webpack.prod.js",
-    "build:pre": "cross-env NODE_ENV=production ENVIRONMENT=pre webpack --config ./build/webpack.prod.js",
-    "analyzer": "cross-env NODE_ENV=production webpack --config ./build/webpack.analyzer.js",
-    "release": "npm run build && npm run smoke && standard-version",
-    "lint": "eslint --ext .js --ext .vue src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/blackdous/template-sap.git"
-  },
-  "keywords": [
-    "vue",
-    "webpack",
-    "teamplete",
-    "ssr",
-    "sap",
-    "multipage"
-  ],
-  "author": "Braveheartforyou",
+  "name": "vuetemplate-cli-template-spa",
+  "version": "1.0.0",
+  "description": "eslint typescript unit jest somke hot-reload",
+  "author": "blackdous",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/blackdous/template-sap.git/issues"
-  },
-  "homepage": "https://github.com/blackdous/template-sap.git#readme",
-  "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@types/jest": "^26.0.5",
-    "@types/webpack-env": "^1.15.2",
-    "compression-webpack-plugin": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.2.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "glob-all": "^3.2.1",
-    "html-webpack-plugin": "^3.2.0",
-    "koa-bodyparser": "^4.3.0",
-    "thread-loader": "^2.1.3",
-    "ts-loader": "^8.0.1",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.7",
-    "vue": "^2.6.10",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "workbox-webpack-plugin": "^5.1.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "echo 提交代码前需要先进行单元测试 && npm run test"
-    }
-  },
-  "lint-staged": {
-    "*.{js,scss}": [
-      "npm run lint",
-      "git add"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-angular": "^9.1.1",
-    "@vue/test-utils": "^1.0.0-beta.33",
-    "autoprefixer": "^9.6.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.4.0",
-    "babel-loader": "^8.0.6",
-    "cache-loader": "^4.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "commitizen": "^4.1.2",
-    "copy-webpack-plugin": "^5.0.4",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.2.0",
-    "cssnano": "^4.1.10",
-    "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "eslint-plugin-vue-libs": "^4.0.0",
-    "fork-ts-checker-webpack-plugin": "^5.0.9",
-    "glob": "^7.1.6",
-    "happypack": "^5.0.1",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "husky": "^2.7.0",
-    "image-webpack-loader": "^6.0.0",
-    "jest": "^25.4.0",
-    "jest-serializer-vue": "^2.0.2",
-    "jest-transform-stub": "^2.0.0",
-    "koa": "^2.13.0",
-    "koa-router": "^9.1.0",
-    "koa-static": "^5.0.0",
-    "less": "^3.12.0",
-    "less-loader": "^6.2.0",
-    "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "progress-bar-webpack-plugin": "^2.1.0",
-    "purgecss-webpack-plugin": "^2.3.0",
-    "sass-loader": "^8.0.0",
-    "sass-resources-loader": "^2.0.3",
-    "speed-measure-webpack-plugin": "^1.3.3",
-    "standard-version": "^8.0.2",
-    "style-loader": "^1.0.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "terser-webpack-plugin": "^3.0.6",
-    "ts-jest": "^26.1.3",
-    "url-loader": "^2.1.0",
-    "vue-class-component": "^7.2.4",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^15.7.1",
-    "vue-property-decorator": "^9.0.0",
-    "vue-router": "^3.3.4",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "vuex": "^3.5.1",
-    "webpack-bundle-analyzer": "^3.8.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "vuetemplate-cli": "^1.0.0"
+  }
 }
