--- a/package.json
+++ b/package.json
@@ -4,7 +4,32 @@
   "description": "eslint typescript unit jest somke hot-reload",
   "author": "blackdous",
   "license": "MIT",
+  "scripts": {
+    "release": "npm run build && npm run smoke && standard-version"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,scss}": [
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
-    "vuetemplate-cli": "^1.0.0"
+    "husky": "^2.7.0",
+    "lint-staged": "^10.2.11",
+    "cz-conventional-changelog": "^3.2.0",
+    "commitizen": "^4.1.2",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-angular": "^9.1.1",
+    "standard-version": "^8.0.2"
   }
 }
