--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     {{/if_eq}}
     {{#smoke}}
-    "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
+    "smoke": "npm run build && jest --collectCoverage=false ./tests/smoke/*.spec.js",
     {{/smoke}}
     {{/unit}}
     {{#commitLint}}
