--- a/template/package.json
+++ b/template/package.json
@@ -20,10 +20,6 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:sit": "cross-env NODE_ENV=production ENVIRONMENT=sit webpack --config ./build/webpack.prod.js",
-    "build:uat": "cross-env NODE_ENV=production ENVIRONMENT=uat webpack --config ./build/webpack.prod.js",
-    "build:pre": "cross-env NODE_ENV=production ENVIRONMENT=pre webpack --config ./build/webpack.prod.js",
     "analyzer": "cross-env NODE_ENV=production webpack --config ./build/webpack.analyzer.js"
   },
   "repository": {
@@ -174,7 +170,8 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.5.1",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "yargs": "^15.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
