--- a/template/package.json
+++ b/template/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     {{#unit}}
     {{#if_eq runner "jest"}}
-    "test": "jest",
+    "test": "npm run build && jest",
     {{/if_eq}}
     {{#smoke}}
     "smoke": "npm run build && jest --collectCoverage=false ./tests/smoke/*.spec.js",
@@ -74,7 +74,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "echo 提交代码前需要先进行单元测试 && npm run build && npm run test"
+      "pre-push": "echo 提交代码前需要先进行单元测试 && npm run smoke"
     }
   },
   "lint-staged": {
