--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuetemplate-cli-template-spa",
+  "name": "vuetemplates-cli-spa",
   "version": "1.0.1",
   "description": "eslint typescript unit jest somke hot-reload",
   "author": "blackdous",
